1 - Create the second activity that it is responsible for to send mail to cliente with attachment. TODO - The button attachment changes the ID, so it is necessary to change the way how we catch this field, because each execution of this project, the ID changes. 2 - Create the activity that catch the PDF file and convert to CSV. First version

--- a/project.json
+++ b/project.json
@@ -1,10 +1,11 @@
 {
   "name": "TKS-Challenge",
   "description": "Processo em Branco",
-  "main": "Main.xaml",
+  "main": "AnswerMail.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.9.0-preview]",
     "UiPath.Mail.Activities": "[1.9.0-preview]",
+    "UiPath.PDF.Activities": "[3.2.2]",
     "UiPath.System.Activities": "[20.6.1-preview]",
     "UiPath.UIAutomation.Activities": "[20.6.0-preview]"
   },
